# matrix-client-haskell

./: .gitreview  .zuul.yaml  CHANGELOG.md  README.md  cabal.project  flake.nix  matrix-client.cabal
.github/workflows/: haskell-ci.yml  main.yml
matrix-bot/: README.md  matrix-bot.cabal
matrix-bot/src/MatrixBot/: Main.hs
matrix-bot/src/Network/Matrix/: Bot.hs
matrix-bot/src/Network/Matrix/Bot/: Async.hs  ErrorHandling.hs  Event.hs  EventGroup.hs  Handler.hs  JSON.hs  Router.hs  State.hs  Sync.hs
matrix-bot/src/Network/Matrix/Bot/Async/: Internal.hs
matrix-bot/src/Network/Matrix/Bot/Event/: Internal.hs
matrix-bot/src/Network/Matrix/Bot/EventGroup/: Internal.hs
matrix-bot/src/Network/Matrix/Bot/Router/: Internal.hs
matrix-client/: CHANGELOG.md  matrix-client.cabal
matrix-client/src/Network/Matrix/: Client.hs  Identity.hs  Internal.hs  Room.hs  Tutorial.hs
matrix-client/src/Network/Matrix/Client/: Lens.hs
matrix-client/test/: Spec.hs
src/Network/Matrix/: Client.hs  Events.hs  Identity.hs  Internal.hs  Room.hs  Tutorial.hs
src/Network/Matrix/Client/: Lens.hs
test/: Spec.hs
test/data/: message-edit.json  message-reply.json  reaction.json
