cabal-version:       2.4
name:                matrix-client
version:             0.1.0.0
synopsis:            A matrix client library
description:
    Matrix client is a library to interface with https://matrix.org.
    .
    Use this library to interact with matrix server.
    .
homepage:            https://github.com/softwarefactory-project/matrix-client-haskell#readme
bug-reports:         https://github.com/softwarefactory-project/matrix-client-haskell/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          tdecacqu@redhat.com
copyright:           2021 Red Hat
category:            Network
build-type:          Simple
extra-doc-files:     CHANGELOG.md
                     README.md
extra-source-files:  test/data/*.json
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/softwarefactory-project/matrix-client-haskell.git

common common-options
  build-depends:       base                   >= 4.11.0.0 && < 5
                     , aeson                  >= 1.0.0.0  && < 1.6
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wno-unused-imports
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  build-depends:       SHA                    ^>= 1.6
                     , base64
                     , http-client            >= 0.5.0    && < 0.8
                     , http-client-tls        >= 0.2.0    && < 0.4
                     , text                   >= 0.11.1.0 && < 1.3
                     , time
  hs-source-dirs:      src
  exposed-modules:     Network.Matrix.Client
                     , Network.Matrix.Identity
  other-modules:       Network.Matrix.Internal

test-suite unit
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , matrix-client
                    , hspec >= 2
