cabal-version:      2.4
name:               matrix-bot
version:            0.1.0.0
license:            Apache-2.0
author:             Tristan Cacqueray
maintainer:         tdecacqu@redhat.com
copyright:          2021 Red Hat

flag dev
  description: Use development settings
  default:     False
  manual:      True

common common
    default-language: Haskell2010
    if flag(dev)
        ghc-options:
            -Wall
            -Wcompat
            -Werror
            -Widentities
            -Wincomplete-record-updates
            -Wincomplete-uni-patterns
            -Wpartial-fields
            -Wredundant-constraints
    else
        ghc-options:
            -Wall

library
    import:           common
    build-depends:    base < 5
                    , matrix-client
    hs-source-dirs:   src
    exposed-modules:  MatrixBot.Main
    default-language: Haskell2010
