cabal-version:      2.4
name:               matrix-bot
version:            0.1.0.0
license:            Apache-2.0
author:             Tristan Cacqueray
maintainer:         tdecacqu@redhat.com
copyright:          2021 Red Hat

flag dev
  description: Use development settings
  default:     False
  manual:      True

common common
    default-language: Haskell2010
    if flag(dev)
        ghc-options:
            -Wall
            -Wcompat
            -Werror
            -Widentities
            -Wincomplete-record-updates
            -Wincomplete-uni-patterns
            -Wpartial-fields
            -Wredundant-constraints
    else
        ghc-options:
            -Wall

library
    import:           common
    build-depends:    aeson ^>= 1.5.6
                    , aeson-casing ^>= 0.2.0
                    , async ^>= 2.2.4
                    , base < 5
                    , containers ^>= 0.6.2
                    , exceptions ^>= 0.10.4
                    , matrix-client
                    , mtl ^>= 2.2.2
                    , stm ^>= 2.5.0
                    , stm-chans ^>= 3.0.0
                    , text ^>= 1.2.4
                    , transformers ^>= 0.5.6
                    , resourcet ^>= 1.2.4
                    , unliftio-core ^>= 0.2.0
    hs-source-dirs:   src
    exposed-modules:  MatrixBot.Main
                    , Network.Matrix.Bot
    other-modules:    Network.Matrix.Bot.Async
                    , Network.Matrix.Bot.ErrorHandling
                    , Network.Matrix.Bot.Event
                    , Network.Matrix.Bot.JSON
                    , Network.Matrix.Bot.Router
                    , Network.Matrix.Bot.State
                    , Network.Matrix.Bot.Sync
    default-language: Haskell2010
