cabal-version:       2.4
name:                matrix-client
version:             0.1.4.0
synopsis:            A matrix client library
description:
    Matrix client is a library to interface with https://matrix.org.
    .
    Use this library to interact with matrix server.
    .
    Read the "Network.Matrix.Tutorial" for a detailed tutorial.
    .
    Please see the README at https://github.com/softwarefactory-project/matrix-client-haskell#readme
    .
homepage:            https://github.com/softwarefactory-project/matrix-client-haskell#readme
bug-reports:         https://github.com/softwarefactory-project/matrix-client-haskell/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          tdecacqu@redhat.com
copyright:           2021 Red Hat
category:            Network
build-type:          Simple
extra-doc-files:     CHANGELOG.md
extra-source-files:  test/data/*.json
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/softwarefactory-project/matrix-client-haskell.git

common common-options
  build-depends:       base                   >= 4.11.0.0 && < 5
                     , aeson-casing           >= 0.2.0.0  && < 0.3.0.0
                     , aeson                  >= 1.0.0.0  && < 1.6
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       --write-ghc-environment-files=always
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists

  default-language:    Haskell2010

common lib-depends
  build-depends:       SHA                    ^>= 1.6
                     , base64
                     , bytestring
                     , containers
                     , exceptions
                     , hashable
                     , http-client            >= 0.5.0    && < 0.8
                     , http-client-tls        >= 0.2.0    && < 0.4
                     , http-types             >= 0.10.0   && < 0.13
                     , network-uri
                     , profunctors
                     , retry                  ^>= 0.8
                     , text                   >= 0.11.1.0 && < 1.3
                     , time
                     , unordered-containers

library
  import:              common-options, lib-depends
  hs-source-dirs:      src
  exposed-modules:     Network.Matrix.Client
                     , Network.Matrix.Client.Lens
                     , Network.Matrix.Identity
                     , Network.Matrix.Tutorial
  other-modules:       Network.Matrix.Events
                     , Network.Matrix.Internal
                     , Network.Matrix.Room

test-suite unit
  import:             common-options, lib-depends
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test, src
  main-is:            Spec.hs
  build-depends:      base
                    , bytestring
                    , aeson-pretty
                    , hspec >= 2
                    , matrix-client
                    , text
